--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-vue": "^1.0.1",
+    "@nuxtjs/composition-api": "^0.32.0",
     "aws-amplify": "^4.3.19",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
