--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/vuetify": "^1.12.3"
   }
 }
