--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^4.3.19",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-typed-vuex": "^0.3.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
